linear processing of normally distributed randVar

--- a/common/math/graphics/pdf_Normal_1_squareRoot1over2pi.tex
+++ b/common/math/graphics/pdf_Normal_1_squareRoot1over2pi.tex
@@ -8,10 +8,10 @@
   %-------------------------------------
   % axes
   %-------------------------------------
-  \psset{ xlabelsep=1pt, linewidth=0.75pt, linecolor=axis, Dy=0.5 }%
-  \psaxes[yAxis=false,ticks=x,labels=x]{<->}(0,0)(-1.5,0)(3.5,1.25)% x axis
-  \psaxes[xAxis=false,ticks=y,labels=y]{ ->}(0,0)(-1.5,0)(3.5,1.25)% y axis
- %\psline[linestyle=dashed,linecolor=red](0,1)(1,1)(1,0)%
+  \psset{ xlabelsep=1pt, linecolor=axis, Dy=0.5 }%
+  \psaxes[linewidth=0.75pt, yAxis=false,ticks=x,labels=x]{<->}(0,0)(-1.5,0)(3.5,1.25)% x axis
+  \psaxes[linewidth=0.75pt, xAxis=false,ticks=y,labels=y]{ ->}(0,0)(-1.5,0)(3.5,1.25)% y axis
+  \psline[linestyle=dashed,linecolor=red](0,1)(1,1)(1,0)%
   %-------------------------------------
   % plot
   %-------------------------------------
@@ -19,7 +19,7 @@
   \psplot{-1.5}{3.5}%
          [
            /mu 1 def
-           /sigma 0.6316188 def
+           /sigma 0.3989423 def
            /e 2.718282 def
            /sqrt1Over2pi 0.3989423 def
          ]%
