--- a/common/somepdfs.tex
+++ b/common/somepdfs.tex
@@ -109,12 +109,25 @@ value of the \fncte{uniform distribution} should \emph{not} be taken lightly.
     image:       &
     }
 
-\begin{figure}[ht]
-   \begin{center}
-   \includegraphics[height=8cm, width=12cm, clip=]{../common/pdf_norm.eps}
-   \end{center}
+\begin{figure}
+  \centering
+  \begin{tabular}{|c|c|c|}
+    \hline
+    \mc{3}{|c|}{\includegraphics[height=8cm, width=12cm, clip=]{../common/pdf_norm.eps}}
+    \\
+    \mc{3}{c}{Gaussian pdfs with $\mu=0$ and $\sigma\in\intcc{0.1}{2}$}
+    \\\hline
+     \tbox{\includegraphics{../common/math/graphics/pdfs/pdf_Normal_1_squareRoot1over2pi.pdf}}%
+    &\tbox{\includegraphics{../common/math/graphics/pdfs/pdf_Normal_2overSqrtpi.pdf}}%
+    &\tbox{\includegraphics{../common/math/graphics/pdfs/pdf_Normal_0_1.pdf}}%
+    \\
+     $\mu=1$, $\sigma=\frac{1}{\sqrt{2\pi}} \eqa 0.6316188$%
+    &$\mu=1$, $\sigma=\frac{2}{\sqrt{2\pi}} \eqa 0.7978846$%
+    &$\mu=0$, $\sigma=1$%
+    \\\hline
+  \end{tabular}
 \caption{
-  Gaussian pdf with $\mu=0$ and $\sigma\in[0.1,2]$.
+  Gaussian pdfs
   \label{fig:pdf_norm}
   }
 \end{figure}
@@ -279,7 +292,7 @@ Let $\pp(x)$ be a \fncte{probability density function} on a \structe{probability
 \defboxt{
   $\pp(x)$ is a \fnctd{chi-square distribution} if
   \\\indentx$\ds
-    \pp(x) \eqd 
+    \pp(x) \eqd
     \brb{\begin{array}{>{\ds}lM}
       0                                                            &  if $x<   0$ \\
       \frac{1}{\sqrt{2\pi\sigma^2x}}\exp\brs{-\frac{x}{2\sigma^2}} &  if $x\ge 0$
