--- a/common/randvar.tex
+++ b/common/randvar.tex
@@ -372,7 +372,6 @@ plot( density( Y, bw="SJ" ), lwd=3, xlim=c(0,4), col="blue" ) # plot estimated p
     \end{align*}
   \item By the \thme{Inverse probability integral transform} \xref{thm:its}, $\rvY\eqd\ff(\rvX)$ has the
         desired pdf $\fN_1(x)$.
-
 \end{enumerate}
 \end{proof}
 
@@ -560,6 +559,27 @@ $\ppy(y)\eqd\frac{1}{2}$ for $y\in\intoc{1}{3}$ and $0$ otherwise.
     && \text{by \prefp{cor:YaXb}}
 \end{align*}
 \end{proof}
+
+\begin{figure}
+  \centering
+  $\ds\begin{array}{|ccccc|}
+    \hline
+    \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/pdf_Normal_0_1.pdf}}}
+    &\quad\rightarrow\quad&
+    %\boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/n1_int_inverse.pdf}}}
+    \boxed{\tbox{$\ds\ff(x)=\frac{1}{\sqrt{2\pi}}x + 1$}}
+    &\quad\rightarrow\quad&
+    \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/pdf_Normal_1_squareRoot1over2pi.pdf}}}
+    \\
+    \text{\fncte{pdf} $\ppx(x)$ of $\rvX$}
+    &&
+    \ff(x)=\frac{1}{\sqrt{2\pi}}x + 1
+    &&
+    \text{\fncte{pdf} $\ppy(x)$ of $\rvY\eqd\ff(\rvX)$}
+    \\\hline
+  \end{array}$
+  \caption{Flow diagram for \prefpp{ex:ppy_N2}\label{fig:ppy_N2}}
+\end{figure}
 
 %---------------------------------------
 \begin{corollary}
