linear plot with slope=1/sqrt(2pi)

--- a/common/randvar.tex
+++ b/common/randvar.tex
@@ -493,21 +493,22 @@ Let $\rvX$ and $\rvY$ be \fncte{random variable}s in $\clFrr$.
 Let $a,b\in\R$.
 \corbox{
   \brb{\begin{array}{FlCD}
-    (1).&\rvY=a\rvX+b & and \\
-    (2).&a\neq0       &
+    (1).&\rvY=\psdev\rvX+\pmean & and \\
+    (2).&\psdev\neq0            &
   \end{array}}
   \implies
   \brb{
-  \ppy(y) = \mcoml{\frac{1}{\abs{a}} \ppx\brp{\frac{y-b}{a}}}
-                  {\ope{Dilation} by $a$ and \ope{Translation} by $b$}
+  \ppy(y) = \mcoml{\frac{1}{\abs{\psdev}} \ppx\brp{\frac{y-\pmean}{\psdev}}}
+                  {\ope{Dilation} by $\psdev$ and \ope{Translation} by $\pmean$}
   }}
 \end{corollary}
 \begin{proof}
   \begin{enumerate}
     \item lemma: \label{ilem:YaXb_ffp}
-          $\ff(x)=ax+b$ is a \prope{differentiable function} and $\ffp(x)=a$.
+          $\ff(x)=\psdev x+\pmean$ is a \prope{differentiable function} and $\ffp(x)=\psdev$.
     \item lemma: \label{ilem:YaXb_fs}
-          The equation $y=\ff(x)=ax+b$ has $\xN=1$ solution and that solution is $x=\fs_1(y)=\frac{y-b}{a}$.
+          The equation $y=\ff(x)=\psdev x+b$ has $\xN=1$ solution and that solution is 
+          $x=\fs_1(y)=\frac{y-\pmean}{\psdev}$.
     \item It follows that
       \begin{align*}
         \ppy(y)
@@ -515,9 +516,9 @@ Let $a,b\in\R$.
           && \text{by \prefpp{thm:YfX}}
         \\&= \frac{\ppx\brp{\fs_1(y)}}{\abs{\ff'\brp{\fs_1(y)}}}
           && \text{because $\xN=1$ \xref{ilem:YaXb_fs}}
-        \\&= \frac{\ppx\brp{\fs_1(y)}}{\abs{a}}
+        \\&= \frac{\ppx\brp{\fs_1(y)}}{\abs{\psdev}}
           && \text{by \pref{ilem:YaXb_ffp}}
-        \\&= \frac{1}{\abs{a}}\ppx\brp{\frac{y-b}{a}}
+        \\&= \frac{1}{\abs{\psdev}}\ppx\brp{\frac{y-\pmean}{\psdev}}
           && \text{by \pref{ilem:YaXb_fs}}
       \end{align*}
   \end{enumerate}
@@ -566,8 +567,7 @@ $\ppy(y)\eqd\frac{1}{2}$ for $y\in\intoc{1}{3}$ and $0$ otherwise.
     \hline
     \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/pdf_Normal_0_1.pdf}}}
     &\quad\rightarrow\quad&
-    %\boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/n1_int_inverse.pdf}}}
-    \boxed{\tbox{$\ds\ff(x)=\frac{1}{\sqrt{2\pi}}x + 1$}}
+    \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/1overSqrt2piXplus1.pdf}}}
     &\quad\rightarrow\quad&
     \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/pdf_Normal_1_squareRoot1over2pi.pdf}}}
     \\
@@ -576,10 +576,38 @@ $\ppy(y)\eqd\frac{1}{2}$ for $y\in\intoc{1}{3}$ and $0$ otherwise.
     \ff(x)=\frac{1}{\sqrt{2\pi}}x + 1
     &&
     \text{\fncte{pdf} $\ppy(x)$ of $\rvY\eqd\ff(\rvX)$}
+    \\
+    \rvX \sim \pN{\mu_x}{\sigma_x^2} = \pN{0}{1}
+    &&
+    &&
+    \rvY \sim \pN{\mu_x}{\sigma_y^2} = \pN{1}{\frac{1}{2\pi}}
     \\\hline
   \end{array}$
-  \caption{Flow diagram for \prefpp{ex:ppy_N2}\label{fig:ppy_N2}}
+  \caption{Flow diagram for \prefpp{ex:ppy_N01_2x1}\label{fig:ppy_N01_2x1}}
 \end{figure}
+%---------------------------------------
+\begin{example}
+\label{ex:ppy_N01_2x1}
+%---------------------------------------
+\exbox{
+  \brb{%
+    %\tbox{\includegraphics{../common/math/graphics/pdfs/pdf_Normal_0_1.pdf}}
+    \begin{array}{Drc>{\ds}lD}
+      (A) & \ff(x) &\eqd& \frac{1}{\sqrt{2\pi}}x + 1 & and
+    \\(B) & \rvX   &\sim& \pN{0}{1}                  &
+    \end{array}
+    }
+  \quad\implies\quad
+  \brb{
+    \rvY\eqd\ff(\rvX) \sim \pN{1}{\frac{1}{\sqrt{2\pi}}}
+    %\tbox{\includegraphics{../common/math/graphics/pdfs/pdf_Normal_1_squareRoot1over2pi.pdf}}
+    }
+}
+\\\ldots as illustrated in \prefpp{fig:ppy_N01_2x1}.
+\end{example}
+\begin{proof}
+This follows from \prefpp{cor:YaXb}.
+\end{proof}
 
 %---------------------------------------
 \begin{corollary}
