--- a/common/expectation.tex
+++ b/common/expectation.tex
@@ -115,10 +115,10 @@ Let $\rvX$ be a \fncte{random variable} on a \structe{probability space} $\ps$.
      + c\mcom{\int_{y\in\R}\int_{x\in\R}\pdfxy(x,y)  \dx\dy}{$1$}
      %&& \text{by \prope{lineararity} of $\int\int\dy\dx$}
      %&& \text{\xref{def:linop}}
-  \\&= a\mcom{\int_{x\in\R} x \pdfx(x) \dx}{$\pE\rvX$}
-     + b\mcom{\int_{y\in\R} y \pdfy(y) \dy}{$\pE\rvY$}
+  \\&= a\mcom{\int_{x\in\R} x \pdfx(x) \dx}{$\pEx\rvX$}
+     + b\mcom{\int_{y\in\R} y \pdfy(y) \dy}{$\pEy\rvY$}
      + c
-  \\&= \boxed{\brp{a\pEx\rvX} + \brp{b\pEy\rvY} + c}
+  \\&\eqd \boxed{\brp{a\pEx\rvX} + \brp{b\pEy\rvY} + c}
 \end{align*}
 \end{proof}
 
@@ -198,8 +198,8 @@ and from properities of all linear operators \xref{thm:L_LMN}.
 %---------------------------------------
 Let $\rvX$ be a \fncte{random variable} on a \structe{probability space} $\ps$.
 \corbox{\begin{array}{>{\ds}rc>{\ds}lC}
-    \pVar(\psdev\rvX+b) &=& \psdev^2\pVar(\rvX)           & \forall \psdev,b  \in\R
-  \\\pVar(\rvX)         &=& \pEx(\rvX^2) - (\pEx\rvX)^2   &
+    \pVar(\psdev\rvX+\mu) &=& \psdev^2\pVar(\rvX)           & \forall \psdev,b  \in\R
+  \\\pVar(\rvX)           &=& \pEx(\rvX^2) - (\pEx\rvX)^2   &
 \end{array}}
 \end{corollary}
 \begin{proof}
@@ -218,9 +218,9 @@ Let $\rvX$ be a \fncte{random variable} on a \structe{probability space} $\ps$.
   \\&=    \pEx(\rvX^2) - (\pEx\rvX)^2
 \\
   \pVar(\psdev\rvX+b)
-    &=    \pEx(\psdev\rvX+b)^2  - [\pEx(\psdev\rvX+b)]^2
-  \\&=    \pEx(\psdev^2\rvX^2+2\psdev b\rvX+b^2)  - [\psdev(\pEx\rvX)+b]^2
-  \\&=    \psdev^2 \pEx\rvX^2  +2\psdev b\pEx\rvX + b^2 - \brs{\psdev^2[\pEx\rvX]^2 + 2\psdev b\pEx\rvX + b^2}
+    &=    \pEx(\psdev\rvX+\mu)^2  - [\pEx(\psdev\rvX+\mu)]^2
+  \\&=    \pEx(\psdev^2\rvX^2+2\psdev \mu\rvX+\mu^2)  - [\psdev(\pEx\rvX)+\mu]^2
+  \\&=    \psdev^2 \pEx\rvX^2  +2\psdev \mu\pEx\rvX + \mu^2 - \brs{\psdev^2[\pEx\rvX]^2 + 2\psdev \mu\pEx\rvX + \mu^2}
     &&    \text{by \prope{linearity} of $\pE$}
     &&    \text{\xref{thm:pE_linop}}
   \\&=    \psdev^2\brs{ \pEx\rvX^2  - (\pEx\rvX)^2 }
