--- a/common/somepdfs.tex
+++ b/common/somepdfs.tex
@@ -115,7 +115,7 @@ value of the \fncte{uniform distribution} should \emph{not} be taken lightly.
     \hline
     \mc{3}{|c|}{\includegraphics[height=8cm, width=12cm, clip=]{../common/pdf_norm.eps}}
     \\
-    \mc{3}{c}{Gaussian pdfs with $\mu=0$ and $\sigma\in\intcc{0.1}{2}$}
+    \mc{3}{|c|}{Gaussian pdfs with $\pmean=0$ and $\pvar\in\intcc{0.1}{2}$}
     \\\hline
      \tbox{\includegraphics{../common/math/graphics/pdfs/pdf_Normal_1_squareRoot1over2pi.pdf}}%
     &\tbox{\includegraphics{../common/math/graphics/pdfs/pdf_Normal_2overSqrtpi.pdf}}%
