indicator function definition conditionally in spline chapter

--- a/common/randvar.tex
+++ b/common/randvar.tex
@@ -109,7 +109,7 @@ Let $\rvY$ be a \fncte{random variable} \fncte{cumulative distribution function}
 \begin{example}
 \label{ex:pit}
 %---------------------------------------
-\exboxt{
+\exboxp{
   Let $\rvX$ be a random variable with \fncte{cdf} \xref{def:cdf} $\pcx(x)$
   and \fncte{pdf} \xref{def:pdf} $\ppx(x)$ where
   $\ppx(x)$ is the triangle-like \fncte{first order B-spline} $\fN_1(x)$ \xref{ex:bspline_N1}.
@@ -239,22 +239,24 @@ Let $\rvY$ be a \fncte{random variable} \fncte{cumulative distribution function}
 Let $\rvX$ be a \fncte{random variable} with \prope{uniform distribution}.
 Select a function $\ff(x)$ such that $\rvY\eqd\ff(\rvX)$ has \fncte{pdf} \xref{def:pdf}
 $\ppy(y)\eqd\frac{1}{2}$ for $y\in\intoc{1}{3}$ and $0$ otherwise.
-\exbox{\ds
-  \brb{\begin{array}{FMD}
-    (1) & $\ppx(x)$ is \prope{uniform} & and
-  \\(2) & $\ff(x) \eqd 2x + 1$
-  \end{array}}
-  \qquad\implies\qquad
-  \brb{
-    \rvY \eqd \ff(\rvX)\qquad\text{has \fncte{pdf}}\quad
-    \ppy(y) \eqd \brbl{\begin{array}{lM}
-                          \frac{1}{2} & for $y\in\intoc{1}{3}$\\
-                          0           & otherwise
-                        \end{array}}
-    }
+\exboxt{
+  $\ds
+    \brb{\begin{array}{FMD}
+      (1) & $\ppx(x)$ is \prope{uniform} & and
+    \\(2) & $\ff(x) \eqd 2x + 1$
+    \end{array}}
+    \implies
+    \brb{
+      \rvY \eqd \ff(\rvX)\quad\text{has \fncte{pdf}}\quad
+      \ppy(y) \eqd \brbl{\begin{array}{lM}
+                            \frac{1}{2} & for $y\in\intoc{1}{3}$\\
+                            0           & otherwise
+                          \end{array}}
+      }
+  $
+  \\as illustrated in \prefpp{fig:ppy_2x1}.
   }
-\\\ldots as illustrated in \prefpp{fig:ppy_2x1}.
-Here's some R code demonstrating the concept: % (the ``blue" plot should look approximately like $\fN_1(x)$):
+\\Here's some R code demonstrating the concept: % (the ``blue" plot should look approximately like $\fN_1(x)$):
 \begin{lstlisting}[language=R]
 N = 1e6                                                       # Number of samples
 X = runif( n=N, min=0, max=1 )                                # X = Uniformly distributed RV
@@ -650,8 +652,8 @@ This follows from \prefpp{cor:YaXb}.
 \begin{proof}
 \begin{enumerate}
   \item lemma: \label{ilem:Yf1X_ffp}
-        $\ff(x)=1/x$ is a \prope{differentiable function} in $x>0$
-        and $\ffp(x)=-1/x^2$.
+        $\ff(x)=1/x$ is a \prope{differentiable function} in $x\neq0$
+        and $\ffp(x)=\frac{-1}{x^2}$.
   \item lemma: \label{ilem:Yf1X_ffi}
         The equation $y=\ff(x)=\frac{1}{x}$ has $\xN=1$ solution which is $x=\fs_1(y)=\frac{1}{y}$ for $y\neq0$.
   \item It follows that
