--- a/common/spline.tex
+++ b/common/spline.tex
@@ -9,6 +9,35 @@
 %=======================================
 \section{Definitions}
 %=======================================
+\ifdochasnot{relation}{
+%---------------------------------------
+\begin{definition}
+\footnote{
+  \citerp{poussin1915}{440},
+  \citerp{hausdorff1937e}{22},
+  \citerp{feller1971}{104}, %{1. Baire Functions}\\
+  \citerp{ab}{126}
+  %\citerp{halmos1950}{15},
+  }
+\label{def:setind}
+\index{function!characteristic}
+\index{function!indicator}
+%---------------------------------------
+Let $\setX$ be a set.
+\defboxt{
+  The \fnctd{indicator function} $\setind\in\clF{\psetx}{\setn{0,1}}$ is defined as
+  \\\indentx$\ds
+  \setind_{\setA}(x) =
+    \brbl{\begin{array}{lMC}
+            1  & for $x\in \setA$ & \forall x\in\setX,\; \setA\in\psetx \\
+            0  & otherwise        &
+          \end{array}}
+    $
+  \\
+  The indicator function $\setind$ is also called the \fnctd{characteristic function}.
+  }
+\end{definition}}
+
 \begin{minipage}{\tw-65mm}
 %---------------------------------------
 \begin{definition}
