--- a/common/relation.tex
+++ b/common/relation.tex
@@ -2369,35 +2369,35 @@ That a statement is either true or false but definitely not both is called
 \hie{the law of the excluded middle} and is a fundamental property of
 all \hie{Boolean algebras} $(\setn{\ltrue,\lfals},\lor,\land)$.
 \ifdochas{logic}{\footnote{excluded middle: \prefp{thm:logic} }}
-The \hie{indicator function} (next definition) is a convenient
+The \fncte{indicator function} (next definition) is a convenient
 ``indicator" of whether or not a particular element is in a set,
 and has several interesting properties \xref{thm:setind}.
 %---------------------------------------
 \begin{definition}
 \footnote{
-  \citerp{feller1971}{104}, %{1. Baire Functions}\\
-  \citerp{ab}{126},
-  %\citerp{halmos1950}{15},
+  \citerp{poussin1915}{440},
   \citerp{hausdorff1937e}{22},
-  \citorp{poussin1915}{440}
+  \citerp{feller1971}{104}, %{1. Baire Functions}\\
+  \citerp{ab}{126}
+  %\citerp{halmos1950}{15},
   }
 \label{def:setind}
 \index{function!characteristic}
 \index{function!indicator}
 %---------------------------------------
 Let $\setX$ be a set.
-\defbox{\begin{array}{M}\indxs{\setind}
-  The \hid{indicator function} $\setind\in\clF{\psetx}{\setn{0,1}}$ is defined as
+\defboxt{
+  The \fnctd{indicator function} $\setind\in\clF{\psetx}{\setn{0,1}}$ is defined as
   \\\indentx$\ds
   \setind_{\setA}(x) =
-    \brbl{\begin{array}{ll @{\qquad}C}
-      1  & $ for $ x\in \setA       & \forall x\in\setX,\; \setA\in\psetx \\
-      0  & $ for $ x\notin \setA   & \forall x\in\setX,\; \setA\in\psetx
-    \end{array}}
+    \brbl{\begin{array}{lMC}
+            1  & for $x\in \setA$ & \forall x\in\setX,\; \setA\in\psetx \\
+            0  & otherwise        &
+          \end{array}}
     $
   \\
-  The indicator function $\setind$ is also called the \hid{characteristic function}.
-\end{array}}
+  The indicator function $\setind$ is also called the \fnctd{characteristic function}.
+  }
 \end{definition}
 
 %---------------------------------------
