--- a/common/math/graphics/unitcircle_roots4.tex
+++ b/common/math/graphics/unitcircle_roots4.tex
@@ -4,13 +4,15 @@
 %============================================================================
 \begin{pspicture}(-1.5,-1.5)(1.75,1.5)%
   %-------------------------------------
-  % settings
-  %-------------------------------------
-  \psset{radius=1mm,linewidth=1pt}%
-  %-------------------------------------
   % nodes
   %-------------------------------------
-  \pnode(0,0){origin}%          z-plane origin
+  \pnode(0,0){origin}% complex-plane origin
+  \uput{1.0}[-60](origin){\pnode(0,0){circleP}}% circle point
+  \uput{1.5}[-50](origin){\pnode(0,0){circleL}}% circle point
+  \uput{1.0}[ 45](origin){\pnode(0,0){root1}}%
+  \uput{1.0}[135](origin){\pnode(0,0){root2}}%
+  \uput{1.0}[225](origin){\pnode(0,0){root3}}%
+  \uput{1.0}[315](origin){\pnode(0,0){root4}}%
   %-------------------------------------
   % axes
   %-------------------------------------
@@ -20,17 +22,16 @@
   %-------------------------------------
   % unit circle
   %-------------------------------------
-  \pscircle[linecolor=unitcircle](origin){1}%            unit circle
-  \uput{1.41}[-50](0,0){\rnode[t]{circleL}{$\scy\abs{x}=1$}}% circle label
-  \pnode(0.5,-0.866){circleP}% circle point
+  \pscircle[linecolor=unitcircle](origin){1}%  unit circle
+  \rput[tl](circleL){$\scy\abs{x}=1$}% circle label
   \ncline[linecolor=unitcircle,linestyle=dotted,nodesepA=0pt]{->}{circleL}{circleP}% circle pointer
   %-------------------------------------
   % zeroes
   %-------------------------------------
-  \uput{1}[  45](0,0){\pscircle[linecolor=red](0,0){1mm}}%
-  \uput{1}[ 135](0,0){\pscircle[linecolor=red](0,0){1mm}}%
-  \uput{1}[-135](0,0){\pscircle[linecolor=red](0,0){1mm}}%
-  \uput{1}[ -45](0,0){\pscircle[linecolor=red](0,0){1mm}}%
+  \rput(root1){\pscircle[linecolor=red](0,0){1mm}}%
+  \rput(root2){\pscircle[linecolor=red](0,0){1mm}}%
+  \rput(root3){\pscircle[linecolor=red](0,0){1mm}}%
+  \rput(root4){\pscircle[linecolor=red](0,0){1mm}}%
   %-------------------------------------
   % Axis ticks
   %-------------------------------------
