Example pdf N0(x-1) filtered by 1/x

--- a/common/randvar.tex
+++ b/common/randvar.tex
@@ -644,8 +644,8 @@ This follows from \prefpp{cor:YaXb}.
     \quad\rvX\neq0
     }
   \quad\implies\quad
-  \brb{\ppy(y) = \begin{array}{lM}
-    \frac{1}{y^2} \ppx\left( \frac{1}{y} \right) & for $y\neq0$
+  \brb{\ppy(x) = \begin{array}{lM}
+    \frac{1}{x^2} \ppx\brp{\frac{1}{x}} & for $x\neq0$
   \end{array}}
   }
 \end{corollary}
@@ -677,6 +677,79 @@ This follows from \prefpp{cor:YaXb}.
     \end{align*}
 \end{enumerate}
 \end{proof}
+
+\begin{figure}
+  \centering
+  $\ds\begin{array}{|ccccc|}
+    \hline
+    \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/pdf_Uniform_1-2.pdf}}}
+    &\quad\rightarrow\quad&
+    \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/1_over_x_gt0.pdf}}}
+    &\quad\rightarrow\quad&
+    \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/pdf_Uniform12_1X.pdf}}}
+    \\
+    \text{\fncte{pdf} $\ppx(x)$ of $\rvX$}
+    &&
+    \ff(x)=\frac{1}{x}
+    &&
+    \text{\fncte{pdf} $\ppy(x)$ of $\rvY\eqd\ff(\rvX)$}
+    \\
+    \rvX \sim \fN_0(x-1)
+    &&
+    &&
+    \rvY
+    \\\hline
+  \end{array}$
+  \caption{Flow diagram for \prefpp{ex:ppy_N01_2x1}\label{fig:ppy_U12_1X}}
+\end{figure}
+%---------------------------------------
+\begin{example}
+\label{ex:ppy_U12_1X}
+%---------------------------------------
+\exboxt{$\ds
+  \brb{%
+    \begin{array}{Drc>{\ds}lD}
+      (A) & \ff(x) &\eqd& \frac{1}{x} & and
+    \\(B) & \rvX   &\sim& \fN_0(x-1)  &
+    \end{array}
+    }
+  \quad\implies\quad
+  \brb{
+    \rvY\eqd\ff(\rvX) \sim
+    \brbl{\begin{array}{lM}
+            \frac{1}{x^2} & for $x\in\intco{\frac{1}{2}}{1}$\\
+            0             & otherwise
+          \end{array}}
+    }
+  $
+  \\\ldots as illustrated in \prefpp{fig:ppy_U12_1X}.
+}
+\end{example}
+\begin{enumerate}
+  \item There is a discontinuity at $x=0$ for the function $\ff(x)\eqd\frac{1}{x}$.
+        However, note that the probability of $\rvX=0$ is itself $0$ (and so $\rvX$ will never be $0$ anyways).
+  \item By straight forward application of \prefp{cor:Yf1X}\ldots
+    \begin{align*}
+      \ppy(x)
+        &= \frac{1}{x^2} \ppx\brp{\frac{1}{x}}
+        && \text{by \prefp{cor:Yf1X}}
+      \\&=  \brbl{\begin{array}{lM}
+             \frac{1}{x^2} & for $x\in\intco{\frac{1}{2}}{1}$\\
+             0             & otherwise
+           \end{array}}
+        && \text{because $\fN_0(x-1)=0$ for $x<\frac{1}{2}$ and $x\ge1$}
+    \end{align*}
+  \item Note that the area under $\ppy(x)$ is $1$ (which is what we should expect \xref{thm:pdf1}):
+    \begin{align*}
+      \boxed{\int_{x\in\R}\ppy(x)\dx}
+        &= \int_{x=\frac{1}{2}}^{x=1} \frac{1}{x^2} \dx
+        && \text{because $\fN_0(x-1)=0$ for $x<\frac{1}{2}$ and $x\ge1$}
+      \\&= \brlr{\frac{-1}{x}}_{x=\frac{1}{2}}^{x=1}
+        && \text{by \thme{Fundamental Theorem of Calculus}}
+      \\&= \brp{\frac{-1}{1}} - \brp{\frac{-1}{\sfrac{1}{2}}}
+         = -1 + 2 = \boxed{1}
+    \end{align*}
+\end{enumerate}
 
 %---------------------------------------
 \begin{corollary}
