Chi-Squared distribution with 1 degree of freedom

--- a/common/randvar.tex
+++ b/common/randvar.tex
@@ -88,7 +88,7 @@ Let $\rvY$ be a \fncte{random variable} \fncte{cumulative distribution function}
     \\
       \ppx(x)= \brbl{\begin{array}{r@{}lD}
                         &x                      & for $0 < x \le 1$\\
-                       -&x                      & for $1 < x \le 2$\\
+                       -&x+2                    & for $1 < x \le 2$\\
                         &0                      & otherwise
                      \end{array}}
     &&\ff(x) = \brbl{\begin{array}{r@{}lD}
@@ -222,12 +222,16 @@ Let $\rvY$ be a \fncte{random variable} \fncte{cumulative distribution function}
     \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/n0_2x1_int_inverse.pdf}}}
     &\quad\rightarrow\quad&
     \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/n0_2x1.pdf}}}
-    \\
-    \text{\fncte{pdf} $\ppx(x)$ of $\rvX$}
+    \\\ppx(x)= \brbl{\begin{array}{r@{}lD}
+                        &1                      & for $0 \le x < 1$\\
+                        &0                      & otherwise
+                     \end{array}}
     &&
     \ff(x)=2x+1
-    &&
-    \text{\fncte{pdf} $\ppy(x)$ of $\rvY\eqd\ff(\rvX)$}
+    &&\ppy(x)= \brbl{\begin{array}{r@{}lD}
+                        &\frac{1}{2}            & for $1 \le x < 3$\\
+                        &0                      & otherwise
+                     \end{array}}
     \\\hline
   \end{array}$
   \caption{Flow diagram for \prefpp{ex:ppy_2x1}\label{fig:ppy_2x1}}
@@ -315,12 +319,18 @@ plot( density( Y, bw="SJ" ), lwd=3, xlim=c(0,4), col="blue" ) # plot estimated p
     \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/n1_int_inverse.pdf}}}
     &\quad\rightarrow\quad&
     \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/n1.pdf}}}
-    \\
-    \text{\fncte{pdf} $\ppx(x)$ of $\rvX$}
+    \\\ppx(x)= \brbl{\begin{array}{r@{}lD}
+                        &1                      & for $0 \le x < 1$\\
+                        &0                      & otherwise
+                     \end{array}}
     &&
     \ff(x)=\pcy^{-1}(x)
     &&
-    \text{\fncte{pdf} $\ppy(x)$ of $\rvY\eqd\ff(\rvX)$}
+      \ppy(x)= \brbl{\begin{array}{r@{}lD}
+                        &x                      & for $0 < x \le 1$\\
+                       -&x+2                    & for $1 < x \le 2$\\
+                        &0                      & otherwise
+                     \end{array}}
     \\\hline
   \end{array}$
   \caption{Flow diagram for \prefpp{ex:ppy_N1}\label{fig:ppy_N1}}
@@ -884,6 +894,54 @@ Let $\rvX$ and $\rvY$ be \fncte{random variable}s.
          = -1 + 2 = \boxed{1}
     \end{align*}
 \end{enumerate}
+\end{proof}
+
+\begin{figure}
+  \centering
+  $\ds\begin{array}{|ccccc|}
+    \hline
+    \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/pdf_Normal_0_1.pdf}}}
+    &\quad\rightarrow\quad&
+    \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/x_squared.pdf}}}
+    &\quad\rightarrow\quad&
+    \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/pdf_Normal01_ChiSq-k1.pdf}}}
+    \\
+    \text{\fncte{pdf} $\ppx(x)$ of $\rvX$}
+    &&
+    \ff(x)=x^2
+    &&
+    \text{\fncte{pdf} $\ppy(x)$ of $\rvY\eqd\ff(\rvX)$}
+    \\
+    \rvX \sim \fN(0,1)
+    &&
+    &&
+    \rvY \sim \brlr{\chi(k)}_{k=1}
+    \\\hline
+  \end{array}$
+  \caption{Flow diagram for \prefpp{ex:ChiSq_k1}\label{fig:ChiSq_k1}}
+\end{figure}
+%---------------------------------------
+\begin{example}
+\label{ex:ChiSq_k1}
+%---------------------------------------
+\exboxt{$\ds
+  \brb{%
+    \begin{array}{Drc>{\ds}lD}
+      (A) & \ff(x) &\eqd& x^2         & and
+    \\(B) & \rvX   &\sim& \fN(0,1  )  &
+    \end{array}
+    }
+  \quad\implies\quad
+  \brb{
+    \rvY \eqd \ff(\rvX) \sim \chi(1) \eqd \frac{1}{\sqrt{2}\Gamma(1/2)} x^{-1/2} e^{-x/2}
+    }
+  $
+  \\where $\chi(k)$ is the \fncte{chi-squared distribution with $k$ degrees of freedom} \xref{def:chisq},
+  $\Gamma(x)$ is the \fncte{Gamma function} \xref{def:gamma}, and as illustrated in \prefpp{fig:YX2}.
+}
+\end{example}
+\begin{proof}
+See \prefpp{thm:Gamma=X^2}.
 \end{proof}
 
 \begin{figure}\color{figcolor}
